<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingPrefix"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/msg"
        android:text="@string/quality_check_message"
        android:gravity="center"
        android:textSize="17sp"
        android:layout_below="@+id/toolbar"
        android:layout_margin="16dp"
        android:textColor="@color/colorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_below="@+id/msg"
        android:background="@drawable/bg_gradient_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <ImageView
        android:id="@+id/image"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/msg"
        android:layout_above="@+id/redo_crop"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/redo_crop"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_above="@+id/btn_confirm"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:text="@string/quality_check_redo"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btn_confirm"
        android:text="@string/quality_check_btn"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        style="@style/ButtonMaterial" />

</RelativeLayout>