<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingPrefix"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar" />

    <View
        android:layout_below="@+id/toolbar"
        android:background="@drawable/bg_gradient_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/dimensions_lay"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/dim_preview_lay"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:paddingLeft="58dp"
        android:layout_marginRight="15dp"
        android:gravity="center|bottom"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/overview_image"
            android:src="@mipmap/ic_launcher"
            android:paddingBottom="8dp"
            android:paddingEnd="50dp"
            android:adjustViewBounds="true"
            android:maxHeight="145dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/measure_horizontal_line"
            android:background="@color/colorText"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginEnd="50dp"
            android:layout_alignBottom="@+id/overview_image"
            android:layout_alignEnd="@+id/overview_image"
            />

        <View
            android:id="@+id/measure_vertical_line"
            android:background="@color/colorText"
            android:scaleType="centerCrop"
            android:layout_width="1.5dp"
            android:layout_height="145dp"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="42dp"
            android:layout_alignEnd="@+id/overview_image"
            android:layout_above="@+id/measure_horizontal_line"
            />

        <TextView
            android:id="@+id/measure_vertical_text"
            android:textColor="@color/colorText"
            android:textSize="12dp"
            android:text="H"
            android:gravity="center_vertical"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_alignTop="@+id/overview_image"
            android:layout_alignEnd="@+id/overview_image"
            android:layout_alignBottom="@+id/overview_image"
            fontPath="fonts/Bold.otf"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/measure_horizontal_text"
        android:textColor="@color/colorText"
        android:layout_marginTop="3dp"
        android:layout_marginRight="5dp"
        android:textSize="12dp"
        android:text="W"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        fontPath="fonts/Bold.otf"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/dimensions_lay"
        android:id="@+id/dimens_lay"
        android:weightSum="2"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:textColorHint="@color/unselectedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/width"
                android:id="@+id/width_hint"
                android:textColor="#999999"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fontPath="fonts/Bold.otf"/>

            <EditText
                android:id="@+id/width"
                android:background="@drawable/text_edit_white_selected"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="10dp"
                android:padding="8dp"
                android:textColor="#1A1A1A"
                android:textColorHint="#999999"
                android:hint="@string/width_hint"
                android:inputType="numberDecimal|numberSigned"
                android:layout_width="match_parent"
                android:layout_height="48dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:textColorHint="@color/unselectedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/height"
                android:id="@+id/height_hint"
                android:textColor="#999999"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fontPath="fonts/Bold.otf"/>

            <EditText
                android:id="@+id/height"
                android:background="@drawable/text_edit_white_selected"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="16dp"
                android:textColor="#1A1A1A"
                android:textColorHint="#999999"
                android:hint="@string/height_hint"
                android:inputType="numberDecimal|numberSigned"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="48dp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/warning_text"
        android:visibility="gone"
        android:layout_below="@+id/dimens_lay"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:textColor="@color/colorTextWarning"
        android:text="@string/dimensions_wrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_confirm"
        android:text="@string/quality_check_btn"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        style="@style/ButtonMaterial" />

</RelativeLayout>